Updating the code again to randomly generate X_test

--- a/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
+++ b/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 211,
    "id": "b841ece8-88a7-4066-9ab6-6f2b657ee492",
    "metadata": {},
    "outputs": [],
@@ -49,18 +49,20 @@
     "# Type hints are strictly optional, but personally I find that they make code more reasonable\n",
     "\n",
     "from jaxtyping import Float, Integer\n",
+    "from collections.abc import Callable\n",
     "# This package allows type annotations that include the size of torch Tensors/numpy arrays\n",
     "# It's not necessary, but it helps with understanding what each function does\n",
     "\n",
     "from torch import Tensor\n",
-    "\n",
-    "from collections.abc import Callable\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
     "# Set DTYPE and DEVICE variables for torch tensors\n",
     "DTYPE = torch.float32\n",
     "DEVICE = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "\n",
+    "import torch\n",
+    "import tqdm.notebook as tqdm\n",
     "\n",
     "# Set a seed (for reproducibility)\n",
     "# torch.manual_seed(2024)"
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 333,
    "id": "279b6bd9-ada5-42ea-82cf-254f3cc6d47d",
    "metadata": {},
    "outputs": [],
@@ -159,8 +161,8 @@
     "def compute_posterior_mean_and_variance(\n",
     "    test_inputs: Float[Tensor, \"M D\"],\n",
     "    X: Float[Tensor, \"N D\"],\n",
-    "    K_chol: Float[Tensor, \"N N\"],\n",
     "    y: Float[Tensor, \"N\"],\n",
+    "    K_chol: Float[Tensor, \"N N\"],\n",
     "    ls: Float[Tensor, \"1 D\"],\n",
     "    os: Float[Tensor, \"1 1\"],\n",
     ") -> tuple[Float[Tensor, \"M\"], Float[Tensor, \"M M\"]]:\n",
@@ -171,10 +173,10 @@
     "\n",
     "    test_inputs:     the matrix containing test inputs we want to evaluate f() on\n",
     "    X:               the matrix containing training inputs (where we have observations)\n",
+    "    y:               is the vector of training observations\n",
     "    K_chol:          the Cholesky factor of the k(X, X) kernel matrix evaluated on training inputs\n",
     "                     plus observational noise\n",
     "                         i.e. K_chol @ K_chol.T = (k(X, X) + sigma^2 I)\n",
-    "    y:               is the vector of training observations\n",
     "    ls:              is the lengthscale of the kernel\n",
     "    os:              is the outputscale of the kernel\n",
     "    \"\"\"\n",
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 326,
    "id": "242a8796-3a1f-4828-a69c-03eb7042862d",
    "metadata": {},
    "outputs": [],
@@ -360,7 +362,7 @@
     "    inner_sums: Float[Tensor, \"N 4\"] = torch.sum(A * (X.unsqueeze(-2) - P).pow(2), -1)\n",
     "\n",
     "    # Exponentiate and compute \"outer sums\"\n",
-    "    outer_sums: Float[Tensor, \"N\"] = -alpha @ torch.exp(-inner_sums).mT\n",
+    "    outer_sums: Float[Tensor, \"N\"] = alpha @ torch.exp(-inner_sums).mT\n",
     "    \n",
     "    return outer_sums"
    ]
@@ -391,45 +393,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 329,
    "id": "036d9446-64ea-439e-bdfd-0db356910339",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-0.0254, -1.1966, -0.4085, -0.6268, -0.5142, -0.3427, -0.0486, -0.1650,\n",
-      "        -0.0341])\n",
-      "tensor([-0.0234, -1.1962, -0.4090, -0.6254, -0.5144, -0.3443, -0.0502, -0.1674,\n",
-      "        -0.0331])\n",
-      "tensor([-0.0020, -0.0004,  0.0005, -0.0014,  0.0001,  0.0016,  0.0016,  0.0024,\n",
-      "        -0.0009])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-3.3224])"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ensuring the observe function works as intended\n",
-    "# test_vecs = torch.rand((9, 6))\n",
+    "# test_vecs = torch.rand(9, 6)\n",
     "# true_vals = hartmann_six(test_vecs)\n",
     "# obs_vals = observe(hartmann_six, test_vecs, sigma_sq = 1e-6) # Should be pretty similar.\n",
     "# print(true_vals)\n",
     "# print(obs_vals)\n",
     "# print(true_vals - obs_vals)\n",
     "\n",
-    "# True global optimum of the Hartmann 6D function\n",
+    "# Global optimum of the Hartmann 6D function\n",
     "H6_argmax = torch.tensor([[0.20169, 0.150011, 0.476874, 0.275332, 0.311652, 0.6573]])\n",
-    "hartmann_six(H6_argmax)"
+    "H6_globalmax = hartmann_six(H6_argmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "id": "aa7071d7-72c6-4e5b-8032-836cffa7102d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper function to make the columns of a matrix all have norm 1 \n",
+    "\n",
+    "def normalize_cols(S: Float[Tensor, \"R C\"]) -> Float[Tensor, \"R C\"]:\n",
+    "    # Calculate L2 norms of columns of the given matrix\n",
+    "    col_norms: Float[Tensor, \"C\"] = (S * S).sum(-2).sqrt()\n",
+    "\n",
+    "    # Error checking\n",
+    "    if 0. in col_norms:\n",
+    "        raise Exception(\"Error: One or more columns of the provided matrix has a norm of zero.\")\n",
+    "\n",
+    "    # Divide columns by the norm to ensure each column has L2 norm of 1 \n",
+    "    return torch.div(S, col_norms)"
    ]
   },
   {
@@ -445,28 +445,57 @@
     "\n",
     "Under our setup, $\\mathbf{S}_{t}^{\\top}y \\sim $\n",
     "\n",
-    "This yields the following result: $$\\mathbf{S}_{t} = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\textrm{IG}(\\mathbf{S}_{t}^{\\top}y, \\mathbf{S}_{t}^{\\top}f(\\mathbf{X})) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\frac{1}{2}\\log\\det\\big((\\mathbf{S}_{t}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}_{t}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big)$$"
+    "This yields the following result: $$\\mathbf{S}_{t} = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\textrm{IG}(\\mathbf{S}^{\\top}y, \\mathbf{S}^{\\top}f(\\mathbf{X})) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\frac{1}{2}\\log\\det\\big((\\mathbf{S}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\det\\big((\\mathbf{S}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aa7071d7-72c6-4e5b-8032-836cffa7102d",
+   "execution_count": 183,
+   "id": "90e3bb25-b56a-40a1-ace7-b3afb9b60db4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_cols(S: Float[Tensor, \"R C\"]) -> Float[Tensor, \"R C\"]:\n",
-    "    # Calculate L2 norms of columns of the given matrix\n",
-    "    col_norms: Float[Tensor, \"C\"] = (S.mT @ S).diag().sqrt()\n",
+    "# Entropy-based information gain. This is an objective function (see the equations in the cell above) which we want to maximize.\n",
+    "def entropy_info_gain(S: Float[Tensor, \"N t\"], K_chol: Float[Tensor, \"N N\"]) -> Float:\n",
+    "    \"\"\"\n",
+    "    Computes the entropy-based information gain H(S^T y) - H(S^T y | S^T f(X)) \n",
     "\n",
-    "    # Error checking\n",
-    "    if 0. in col_norms:\n",
-    "        raise Exception(\"Error: One or more columns of the provided matrix has a norm of zero.\")\n",
+    "    S: An \"action matrix\" S which we optimize over \n",
+    "    K_chol: Cholesky factorization of k(X, X) + sigma_sq * I\n",
+    "    \"\"\"    \n",
     "\n",
-    "    # Divide columns by the norm to ensure each column has L2 norm of 1 \n",
-    "    # normed: Float[Tensor, \"R C\"] = torch.div(S, col_norms)\n",
-    "    # normed = normed * torch.sign(normed[0, 0]) # I prefer positive numbers in the top left\n",
-    "    return torch.div(S, col_norms)"
+    "    return torch.linalg.slogdet(S.mT @ K_chol @ K_chol.mT @ S).logabsdet - torch.linalg.slogdet(S.mT @ S).logabsdet    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "id": "93aaa902-1fba-4674-8e0d-88f700a435cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to determine the action matrix \n",
+    "def get_action_matrix(\n",
+    "    K_chol: Float[Tensor, \"N N\"], t: Integer,\n",
+    "    num_iter: Integer = 500, lr: Float = 0.1\n",
+    ") -> Float[Tensor, \"N t\"]:\n",
+    "    \"\"\"\n",
+    "    Uses gradient descent to determine the optimal action matrix and returns said matrix.\n",
+    "    \"\"\"\n",
+    "    init_act = torch.eye(K_chol.size()[-1])[:, :t] # First t columns of the identity matrix\n",
+    "    act = torch.nn.Parameter(init_act)\n",
+    "\n",
+    "    optimizer = torch.optim.Adam(params = [act], lr = lr, maximize = True)\n",
+    "    iterator = tqdm.tqdm(range(num_iter))\n",
+    "    \n",
+    "    for _ in iterator:\n",
+    "        loss = entropy_info_gain(normalize_cols(act), K_chol)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "        iterator.set_postfix(loss = loss.item())\n",
+    "\n",
+    "    return act.data"
    ]
   },
   {
@@ -481,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 380,
    "id": "abaefaf1-a123-46e1-937f-8ebc830f6844",
    "metadata": {},
    "outputs": [],
@@ -490,49 +519,42 @@
     "#   - ls: kernel lengthscale\n",
     "#   - os: kernel outputscale\n",
     "#   - sigma_sq: observational noise\n",
-    "ls: Float[Tensor, \"1 D\"] = torch.ones((1, D), dtype=DTYPE, device=DEVICE)\n",
-    "os: Float[Tensor, \"1 1\"] = torch.tensor(1., dtype=DTYPE, device=DEVICE).view(1, 1)\n",
-    "sigma_sq: Float[Tensor, \"1 1\"] = torch.tensor(1e-2, dtype=DTYPE, device=DEVICE).view(1, 1)\n",
+    "ls: Float[Tensor, \"1 D\"] = torch.ones((1, D), dtype = DTYPE, device = DEVICE)\n",
+    "os: Float[Tensor, \"1 1\"] = torch.tensor(1., dtype = DTYPE, device = DEVICE).view(1, 1)\n",
+    "sigma_sq: Float[Tensor, \"1 1\"] = torch.tensor(1e-2, dtype = DTYPE, device = DEVICE).view(1, 1)\n",
     "\n",
-    "# Create (random) initial dataset D = (X_init, y_init)\n",
-    "d: Integer = 6\n",
-    "N_init: Integer = 101 \n",
-    "X_init: Float[Tensor, \"N_init d\"] = torch.rand((N_init, d))\n",
-    "y_init: Float[Tensor, \"N_init\"] = observe(hartmann_six, X_init, noise = sigma_sq)\n",
+    "# Create variables to store:\n",
+    "#   - X:         inputs that we have observations at\n",
+    "#   - y:         existing observations\n",
+    "#   - K_chol:    Cholesky factor of k(X, X)\n",
     "\n",
-    "# Covariance matrix of initial data points (K + sigma^2 I)\n",
-    "K_init: Float[Tensor, \"N_init N_init\"] = matern_kernel(X_init, X_init, ls, os) + sigma_sq * torch.eye(N_init)"
+    "D: Integer = 6  # Dimension of function input space\n",
+    "N: Integer = 50 # Initial dataset size\n",
+    "X: Float[Tensor, \"N D\"] = torch.rand(N, D)\n",
+    "y: Float[Tensor, \"N\"] = observe(hartmann_six, X_next, sigma_sq)\n",
+    "K_chol = torch.linalg.cholesky(matern_kernel(X_next, X_next, ls, os) + (sigma_sq + 1e-4) * torch.eye(N))\n",
+    "\n",
+    "# K_chol = torch.zeros(0, 0, dtype=DTYPE, device=DEVICE)\n",
+    "# X = torch.zeros(0, D, dtype=DTYPE, device=DEVICE)\n",
+    "# y = torch.zeros(0, dtype=DTYPE, device=DEVICE)\n",
+    "\n",
+    "# N_init: Integer = 50\n",
+    "# X_next: Float[Tensor, \"N_init D\"] = torch.rand(N_init, D)\n",
+    "# y_next: Float[Tensor, \"N_init\"] = observe(hartmann_six, X_next, sigma_sq)\n",
+    "# K_chol = update_chol_newdata(K_chol, X, X_next, ls, os, sigma_sq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "12a1b1fe-0910-48e6-aec5-a6317ffa4509",
+   "execution_count": 381,
+   "id": "1452cebf-398d-439c-be75-508040306622",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
-       "        5.0500, 5.0500])"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Randomly choose points in R^6 where we will evaluate the posterior function(s)\n",
+    "N_test: Integer = 2000\n",
+    "X_test: Float[Tensor, \"N_test D\"] = torch.rand(N_test, D)"
+   ]
   }
  ],
  "metadata": {
