Renaming a file and the subfolder it is in

--- a/Code/IterGP-Comparison/iterative_batch_gp_comparison.ipynb
+++ b/Code/IterGP-Comparison/iterative_batch_gp_comparison.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# Gradient Descent GP Selection\n",
+    "# Batch IterGP\n",
     "\n",
     "A Python notebook regarding Gaussian Processes based primarily on the pre-prints of two papers: *Computation-Aware Gaussian Processes* and *Approximation-Aware Bayesian Optimization*.\n",
     "\n",
