--- a/Code/IterGP-Comparison/iterative_batch_gp_comparison.ipynb
+++ b/Code/IterGP-Comparison/iterative_batch_gp_comparison.ipynb
@@ -11,13 +11,9 @@
     "tags": []
    },
    "source": [
-    "# Batch IterGP\n",
+    "# Iterative vs Batch GP\n",
     "\n",
     "A Python notebook regarding Gaussian Processes based primarily on the pre-prints of two papers: *Computation-Aware Gaussian Processes* and *Approximation-Aware Bayesian Optimization*.\n",
-    "\n",
-    "## Goal\n",
-    "\n",
-    "The main goal is to perform Bayesian Optimization via Gaussian Process (GP) regression, with tweaks to the existing algorithms to reduce computational space and time complexity via approximation.\n",
     "\n",
     "## Problem Setup\n",
     "\n",
@@ -25,12 +21,18 @@
     "\n",
     "We want to use Gaussian Process regression to perform Bayesian optimization to find $x^{*} = \\arg\\max_{x \\in \\mathcal{X}}f(x)$, for the unknown objective function $f(\\cdot): \\mathcal{X} \\to \\mathbb{R}$, for some compact domain $\\mathcal{X} \\subset \\mathbb{R}^{d}$.\n",
     "\n",
-    "Unfortunately, the standard `BayesOpt` formulation has $\\mathcal{O}(n^3)$ time complexity, as the \"proper\" mathematical formulation requires a matrix inversion. To reduce the computational complexity, we include an \"action matrix\" $\\mathbf{S} \\in \\mathbb{R}^{n \\times k}$ for $k \\ll n$ and performing Bayesian optimization on the \"simplified\" dataset $\\mathcal{D}'_{0} = (\\mathbf{S}^{\\top}\\mathbf{X}, \\mathbf{S}^{\\top}\\mathbf{y})$, which yields $\\mathcal{O}(kn^2)$ time complexity."
+    "Unfortunately, the standard `BayesOpt` formulation has $\\mathcal{O}(n^3)$ time complexity, as the \"proper\" mathematical formulation requires a matrix inversion. To reduce the computational complexity, we include an \"action matrix\" $\\mathbf{S}_{k} \\in \\mathbb{R}^{n \\times k}$ for $k \\ll n$ and performing Bayesian optimization on the \"simplified\" dataset $\\mathcal{D}'_{0} = (\\mathbf{S}_{k}^{\\top}\\mathbf{X}, \\mathbf{S}_{k}^{\\top}\\mathbf{y})$, which yields $\\mathcal{O}(kn^2)$ time complexity.\n",
+    "\n",
+    "## Goal\n",
+    "\n",
+    "The main goal is to perform Bayesian Optimization via Gaussian Process (GP) regression, with tweaks to the existing algorithms to reduce computational space and time complexity via approximation.\n",
+    "\n",
+    "We will compare two methods for Bayesian Optimization which utilize action matrices to reduce the computational load. These methods are the `IterGP` algorithm, which builds the action matrix $\\mathbf{S}_{k}$ column-by-column (i.e. at step $k$, we choose action $\\mathbf{s}_{k} \\in \\mathbb{R}^{n \\times 1}$, with $\\mathbf{S}_{k}$ the concatenation of these columns), and the `BatchGP` algorithm, which optimizes $\\mathbf{S}_{k} \\in \\mathbb{R}^{n \\times k}$ in \"one shot\". "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 1,
    "id": "b841ece8-88a7-4066-9ab6-6f2b657ee492",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,7 @@
    "id": "387c8387-479e-453d-b6b9-e020f88fdb2e",
    "metadata": {},
    "source": [
-    "## GP Regression Setup\n",
+    "# Gaussian Process Setup\n",
     "\n",
     "For convenience, we will use a prior mean function $\\mu = 0$ and the [Matérn covariance function](https://en.wikipedia.org/wiki/Mat%C3%A9rn_covariance_function) with $\\nu = 5/2$ as the priors for our Bayesian optimization."
    ]
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 4,
    "id": "279b6bd9-ada5-42ea-82cf-254f3cc6d47d",
    "metadata": {},
    "outputs": [],
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "e1eedbbb-b367-43f3-b856-5f6d5d30a11a",
    "metadata": {},
    "outputs": [],
@@ -304,7 +306,7 @@
     "tags": []
    },
    "source": [
-    "## Test Functions\n",
+    "# Test Functions\n",
     "\n",
     "We will use a few test functions to compare the performance of various Bayesian Optimization algorithms.\n",
     "\n",
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 7,
    "id": "242a8796-3a1f-4828-a69c-03eb7042862d",
    "metadata": {},
    "outputs": [],
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "0b7014df-e9fe-446c-b2a3-894a1beecd5e",
    "metadata": {},
    "outputs": [],
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 9,
    "id": "036d9446-64ea-439e-bdfd-0db356910339",
    "metadata": {},
    "outputs": [],
@@ -412,45 +414,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 300,
-   "id": "aa7071d7-72c6-4e5b-8032-836cffa7102d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Helper function to make the columns of a matrix all have norm 1 \n",
-    "\n",
-    "def normalize_cols(S: Float[Tensor, \"R C\"]) -> Float[Tensor, \"R C\"]:\n",
-    "    # Calculate L2 norms of columns of the given matrix\n",
-    "    col_norms: Float[Tensor, \"C\"] = (S * S).sum(-2).sqrt()\n",
-    "\n",
-    "    # Error checking\n",
-    "    if 0. in col_norms:\n",
-    "        raise Exception(\"Error: One or more columns of the provided matrix has a norm of zero.\")\n",
-    "\n",
-    "    # Divide columns by the norm to ensure each column has L2 norm of 1 \n",
-    "    return torch.div(S, col_norms)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fbd6af83-f0af-4194-9c16-383e5746dc60",
    "metadata": {},
    "source": [
-    "## Acquisition Functions\n",
+    "# Acquisition Function\n",
     "\n",
-    "The primary acquisition function which we will use is the entropy-based information gain. \n",
+    "The primary acquisition function which we will use is the entropy-based information gain, i.e. choosing the policy/action which maximizes a gain in information, expressed as a difference in entropy. \n",
     "\n",
     "The entropy of a $D$-dimensional Gaussian random variable $\\mathbf{X} \\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\mathbf{\\Sigma})$ is given by $H(\\mathbf{X}) = \\frac{1}{2}\\big(\\log\\det(\\mathbf{\\Sigma}) + D\\log(2\\pi{e})\\big)$.\n",
     "\n",
     "Under our setup, $\\mathbf{S}_{t}^{\\top}y \\sim $\n",
     "\n",
-    "This yields the following result: $$\\mathbf{S}_{t} = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\textrm{IG}(\\mathbf{S}^{\\top}y, \\mathbf{S}^{\\top}f(\\mathbf{X})) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\frac{1}{2}\\log\\det\\big((\\mathbf{S}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\det\\big((\\mathbf{S}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big)$$"
+    "This yields the following result: $$\\mathbf{S}_{t} = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\textrm{IG}(\\mathbf{S}^{\\top}y, \\mathbf{S}^{\\top}f(\\mathbf{X})) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\frac{1}{2}\\log\\det\\big((\\mathbf{S}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\det\\big((\\mathbf{S}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\big(\\det(\\mathbf{S}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S})) - \\det(\\mathbf{S}^{\\top}\\mathbf{S})\\big)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 17,
    "id": "90e3bb25-b56a-40a1-ace7-b3afb9b60db4",
    "metadata": {},
    "outputs": [],
@@ -464,38 +445,60 @@
     "    K_chol: Cholesky factorization of k(X, X) + sigma_sq * I\n",
     "    \"\"\"    \n",
     "\n",
-    "    return torch.linalg.slogdet(S.mT @ K_chol @ K_chol.mT @ S).logabsdet - torch.linalg.slogdet(S.mT @ S).logabsdet    "
+    "    return torch.linalg.slogdet(S.mT @ K_chol @ K_chol.mT @ S).logabsdet - torch.linalg.slogdet(S.mT @ S).logabsdet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 24,
+   "id": "aa7071d7-72c6-4e5b-8032-836cffa7102d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper function to ensure that each column of the matrix has an L2 norm of 1 \n",
+    "\n",
+    "def normalize_cols(S: Float[Tensor, \"R C\"]) -> Float[Tensor, \"R C\"]:\n",
+    "    # Calculate L2 norms of columns of the given matrix\n",
+    "    col_norms: Float[Tensor, \"C\"] = (S * S).sum(-2).sqrt()\n",
+    "\n",
+    "    # Error checking to avoid division by 0\n",
+    "    if 0. in col_norms:\n",
+    "        raise Exception(\"Error: One or more columns of the provided matrix has a norm of zero.\")\n",
+    "\n",
+    "    # Divide column-wise by the L2 norm\n",
+    "    return torch.div(S, col_norms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "93aaa902-1fba-4674-8e0d-88f700a435cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to determine the action matrix \n",
+    "# Function which uses gradient descent to determine an N-by-t action matrix\n",
     "def get_action_matrix(\n",
-    "    K_chol: Float[Tensor, \"N N\"], t: Integer,\n",
-    "    num_iter: Integer = 500, lr: Float = 0.1\n",
+    "    K_chol: Float[Tensor, \"N N\"], \n",
+    "    t: Integer,\n",
+    "    num_iter: Integer = 500, \n",
+    "    lr: Float = 0.1\n",
     ") -> Float[Tensor, \"N t\"]:\n",
     "    \"\"\"\n",
-    "    Uses gradient descent to determine the optimal action matrix and returns said matrix.\n",
+    "    Uses gradient descent to determine the N-by-t action matrix which maximizes the difference in entropy.\n",
     "    \"\"\"\n",
-    "    init_act = torch.eye(K_chol.size()[-1])[:, :t] # First t columns of the identity matrix\n",
-    "    act = torch.nn.Parameter(init_act)\n",
-    "\n",
-    "    optimizer = torch.optim.Adam(params = [act], lr = lr, maximize = True)\n",
+    "    init_act = torch.eye(K_chol.size()[-1])[:, :t] # Somewhat arbitrary, but it is a normalized matrix with the right dimensions\n",
+    "    acts = torch.nn.Parameter(init_act)\n",
+    "    optimizer = torch.optim.Adam(params = [acts], lr = lr, maximize = True)\n",
     "    iterator = tqdm.tqdm(range(num_iter))\n",
     "    \n",
     "    for _ in iterator:\n",
-    "        loss = entropy_info_gain(normalize_cols(act), K_chol)\n",
+    "        loss = entropy_info_gain(normalize_cols(acts), K_chol)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
     "        iterator.set_postfix(loss = loss.item())\n",
     "\n",
-    "    return act.data"
+    "    return acts.data"
    ]
   },
   {
@@ -503,18 +506,21 @@
    "id": "a9f29ef7-9b40-43ce-a05a-ce230da9621e",
    "metadata": {},
    "source": [
-    "## Testing Code\n",
+    "# Algorithm Comparison\n",
     "\n",
-    "Here, we actually test out the code based on the functions defined above."
+    "Now, we can actually compare the iterative and batch GP algorithms to one another. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 16,
    "id": "abaefaf1-a123-46e1-937f-8ebc830f6844",
    "metadata": {},
    "outputs": [],
    "source": [
+    "D: Integer = 6  # Dimension of function input space\n",
+    "N: Integer = 50 # Initial dataset size\n",
+    "\n",
     "# GP hyperparameters:\n",
     "#   - ls: kernel lengthscale\n",
     "#   - os: kernel outputscale\n",
@@ -527,12 +533,9 @@
     "#   - X:         inputs that we have observations at\n",
     "#   - y:         existing observations\n",
     "#   - K_chol:    Cholesky factor of k(X, X)\n",
-    "\n",
-    "D: Integer = 6  # Dimension of function input space\n",
-    "N: Integer = 50 # Initial dataset size\n",
     "X: Float[Tensor, \"N D\"] = torch.rand(N, D)\n",
-    "y: Float[Tensor, \"N\"] = observe(hartmann_six, X_next, sigma_sq)\n",
-    "K_chol = torch.linalg.cholesky(matern_kernel(X_next, X_next, ls, os) + (sigma_sq + 1e-4) * torch.eye(N))\n",
+    "y: Float[Tensor, \"N\"] = observe(hartmann_six, X, sigma_sq)\n",
+    "K_chol = torch.linalg.cholesky(matern_kernel(X, X, ls, os) + (sigma_sq + 1e-4) * torch.eye(N))\n",
     "\n",
     "# K_chol = torch.zeros(0, 0, dtype=DTYPE, device=DEVICE)\n",
     "# X = torch.zeros(0, D, dtype=DTYPE, device=DEVICE)\n",
@@ -546,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 23,
    "id": "1452cebf-398d-439c-be75-508040306622",
    "metadata": {},
    "outputs": [],
