--- a/Notes/macros/math-macros.tex
+++ b/Notes/macros/math-macros.tex
@@ -14,7 +14,7 @@
 \newcommand{\indic}[1]{\1_{[#1]}}
 
 % statistics terminology
-\newcommand{\expec}[2][]{\bbE_{#1}[#2]} 
+\newcommand{\expec}[2][]{\bbE_{#1}\left[#2\right]} 
 \newcommand{\prob}[2][]{\bbP_{#1}(#2)}
 \newcommand{\var}[2][]{\text{Var}_{#1}[#2]}
 \newcommand{\bias}[1]{\textbf{bias}(#1)}
